# example1

./: .gitignore  README.md  build.sh  t1.c
cmakeDemo/: CMakeCache.txt  CMakeLists.txt  Demo  Demo1-1.0.1-Linux.sh  Makefile  config.h  config.h.in  install_manifest.txt  t1.c  test.c
cmakeDemo/Testing/Temporary/: CTestCostData.txt
cmakeDemo/exam/: CMakeCache.txt  CMakeLists.txt  Makefile  exa.c
cmakeDemo2/: CMakeLists.txt  hello.c
